@@ -1,3 +1,6 @@
+Edge:
+* [CHANGE] Rake's silent mode is respected for indexing (@endoscient).
+
 2013-08-26: 3.0.5
 * [CHANGE] Updating Riddle dependency to be >= 1.5.8.
 * [FEATURE] Allow scoping of real-time index models.
